fixed spacing for course preview

--- a/assets/css/pricing.css
+++ b/assets/css/pricing.css
@@ -192,7 +192,7 @@ section {
 }
 
 .pricing_tagbox {
-  margin: 3rem 0 2rem 0;
+  margin: 1.5rem 0 3rem 0;
   text-align: center;
 }
 
